--- a/Calculator/cal.html
+++ b/Calculator/cal.html
@@ -10,7 +10,7 @@
     <script src="cal.js"></script>
 </head>
 <body>
-    <h1>CALCULATOR</h1>
+    <h1>CALCULATOR Project Of Oasis Infobyte</h1>
     <div id="casio">
         <h3>CASIO</h6>
         <button></button>
